--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,8 @@ html {
 
 .loader{
     height: 100vh;
+    width: 100%;
+    position: fixed;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -48,9 +50,9 @@ html {
 
 .main{
     overflow-x: hidden;
-    display: none;
+    display: block;
     opacity: 0;
-    animation: appear 1s forwards;
+    animation: appear 1s 4s forwards;
 }
 
 .header{
@@ -59,7 +61,7 @@ html {
     color: white;
     top: 0;
     height: 6rem;
-    width: 99vw;
+    width: 100%;
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
